@@ -63,6 +63,9 @@ environments via programming APIs as shown in the following table:</p>
 <tr><td><a class="reference external" href="Magick++/index.html">C++</a></td>
 <td>Magick++ provides an abstract object-oriented C++ interface.</td>
 </tr>
+<tr><td>'Lua'_</td>
+<td>The gm.Image API provides an interface to GraphicsMagick's Wand API.</td>
+</tr>
 <tr><td><a class="reference external" href="http://aheckmann.github.com/gm/">node.js</a></td>
 <td>Graphicsmagick for node.js provides server-side support for
 Javascript programming with node.js.</td>
